--- a/IOIOTLC5940/AndroidManifest.xml
+++ b/IOIOTLC5940/AndroidManifest.xml
@@ -4,8 +4,12 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <!-- IOIO-OTG uses Bluetooth to communicate -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+  
+    <!-- minSdkVersion is 14 because of Grid Layout -->
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <application
@@ -13,15 +17,24 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+		<uses-library
+		    android:name="com.android.future.usb.accessory"
+			android:required="false" />
+        
         <activity
             android:name="com.an_asumin.ioiotlc5940.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <!-- IOIO-OTG can use wired communication -->
+			<intent-filter>
+				<action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
+			</intent-filter>
+			<meta-data android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED"
+				android:resource="@xml/accessory_filter" />
         </activity>
     </application>
-
 </manifest>
